--- a/scratch/match_block.html
+++ b/scratch/match_block.html
@@ -4,21 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Match Block Test</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <style>
+        .card img {
+            width: 50%;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="card" style="width: 30%">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-4">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Ven, 7 Gen | 21:15
+                    </div>
+                    <div class="row no-gutters align-items-center justify-content-center">
+                        <div class="col-4 order-first">
+                            <img src="https://www.playbasket.it/images/club/logo_016113_U.S.Arcella.png"><br>
+                            Pallacanestro Arcella
+                        </div>
+                        <div class="col-4 order-last">
+                            <img
+                                src="https://www.playbasket.it/images/club/logo_003185_PallacanestroNoventaPol.Dil..png"><br>
+                            Pallacanestro Noventa
+                        </div>
+                        <div class="col-4 card-body">
+                            <h4 class="card-title">
+                                &nbsp;
+                            </h4>
+                            <div class="card-subtitle text-muted">
+                                Promozione
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://goo.gl/maps/AT68Er399kgg4HKw5" target="_blank" class="card-link">Palestra L.P.
+                            Barion</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
 </body>
 
 </html>
