fix columns paramter

--- a/scratch/match_block.html
+++ b/scratch/match_block.html
@@ -50,6 +50,99 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-4">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Ven, 7 Gen | 21:15
+                    </div>
+                    <div class="row no-gutters align-items-center justify-content-center">
+                        <div class="col-4 order-first">
+                            <img src="https://www.playbasket.it/images/club/logo_016113_U.S.Arcella.png"><br>
+                            Pallacanestro Arcella
+                        </div>
+                        <div class="col-4 order-last">
+                            <img
+                                src="https://www.playbasket.it/images/club/logo_003185_PallacanestroNoventaPol.Dil..png"><br>
+                            Pallacanestro Noventa
+                        </div>
+                        <div class="col-4 card-body">
+                            <h4 class="card-title">
+                                &nbsp;
+                            </h4>
+                            <div class="card-subtitle text-muted">
+                                Promozione
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://goo.gl/maps/AT68Er399kgg4HKw5" target="_blank" class="card-link">Palestra L.P.
+                            Barion</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Ven, 7 Gen | 21:15
+                    </div>
+                    <div class="row no-gutters align-items-center justify-content-center">
+                        <div class="col-4 order-first">
+                            <img src="https://www.playbasket.it/images/club/logo_016113_U.S.Arcella.png"><br>
+                            Pallacanestro Arcella
+                        </div>
+                        <div class="col-4 order-last">
+                            <img
+                                src="https://www.playbasket.it/images/club/logo_003185_PallacanestroNoventaPol.Dil..png"><br>
+                            Pallacanestro Noventa
+                        </div>
+                        <div class="col-4 card-body">
+                            <h4 class="card-title">
+                                &nbsp;
+                            </h4>
+                            <div class="card-subtitle text-muted">
+                                Promozione
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://goo.gl/maps/AT68Er399kgg4HKw5" target="_blank" class="card-link">Palestra L.P.
+                            Barion</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Ven, 7 Gen | 21:15
+                    </div>
+                    <div class="row no-gutters align-items-center justify-content-center">
+                        <div class="col-4 order-first">
+                            <img src="https://www.playbasket.it/images/club/logo_016113_U.S.Arcella.png"><br>
+                            Pallacanestro Arcella
+                        </div>
+                        <div class="col-4 order-last">
+                            <img
+                                src="https://www.playbasket.it/images/club/logo_003185_PallacanestroNoventaPol.Dil..png"><br>
+                            Pallacanestro Noventa
+                        </div>
+                        <div class="col-4 card-body">
+                            <h4 class="card-title">
+                                &nbsp;
+                            </h4>
+                            <div class="card-subtitle text-muted">
+                                Promozione
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://goo.gl/maps/AT68Er399kgg4HKw5" target="_blank" class="card-link">Palestra L.P.
+                            Barion</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
